# DSLBricks

./: .gitignore  2  Cargo.toml  Makefile  README.md  mydsl.dbp
builder/: Cargo.toml
compiler/: Cargo.toml  README.md
compiler/compiler/: Cargo.toml
compiler/compiler/macros/macros/: Cargo.toml
compiler/compiler/macros/macros_declarative/: Cargo.toml
compiler/compiler/macros/macros_procedural/: Cargo.toml
compiler/compiler/src/: lib.rs
compiler/compiler_driver/: Cargo.toml
compiler/compiler_driver/src/: lib.rs  prelude.rs  target.rs
compiler/compiler_driver/src/env/: auto.rs
compiler/compiler_dslgen/: Cargo.toml
compiler/compiler_langpart/: Cargo.toml
compiler/compiler_langpart/src/: lexer.rs
compiler/compiler_langpart/src/parser/: pimpl.rs  rule.rs
compiler/compiler_langpart_macros/: Cargo.toml
compiler/compiler_langpart_macros/src/: lexer.rs  lib.rs
compiler/compiler_langpart_macros/tests/: lexer.rs  parser.rs
compiler/crates/bricks/: Cargo.toml
compiler/crates/bricks/src/: lib.rs
compiler/crates/core/design/: Cargo.toml
compiler/crates/core/designer/: Cargo.toml
compiler/crates/core/irgen/: Cargo.toml
compiler/crates/core/processor/: Cargo.toml
compiler/crates/designer/designer_codegen/: Cargo.toml
compiler/crates/executor/compiler/: Cargo.toml
compiler/crates/executor/interpreter/: Cargo.toml
compiler/crates/interface/bricks/: Cargo.toml
compiler/crates/interface/entrypoint/: Cargo.toml
compiler/crates/interface/runtime/: Cargo.toml
compiler/crates/processor/processor/: Cargo.toml
compiler/crates/processor/processor_lexer/: Cargo.toml
compiler/crates/processor/processor_parser/: Cargo.toml
compiler/crates/processor/src/: lib.rs
compiler/crates/runtime/src/: lib.rs
compiler/designer/: Cargo.toml
compiler/designer/designer/: Cargo.toml
compiler/designer/designer/src/: lib.rs
compiler/designer/designer_check/: Cargo.toml
compiler/designer/designer_codegen/: Cargo.toml  build.rs
compiler/designer/designer_codegen/src/: lib.rs  rust.rs
compiler/designer/designer_codegen/template/: Rust.txt  template.txt
compiler/designer/designer_constraint_ctime/: Cargo.toml
compiler/designer/designer_constraint_ctime/macros/: Cargo.toml
compiler/designer/designer_constraint_ctime/macros_declarative/: Cargo.toml
compiler/designer/designer_constraint_ctime/macros_procedural/: Cargo.toml
compiler/designer/designer_constraint_ctime/src/: lib.rs
compiler/designer/designer_constraint_rtime/: Cargo.toml
compiler/designer/designer_design/: Cargo.toml
compiler/designer/designer_design/src/: bnf.rs  lib.rs  macros.rs  part.rs  syntax.rs
compiler/designer/designer_design_macros/macros/: Cargo.toml
compiler/designer/designer_design_macros/macros_declarative/: Cargo.toml
compiler/designer/designer_design_macros/macros_procedural/: Cargo.toml
compiler/dpp/: Cargo.toml
compiler/dpp/src/: lib.rs
compiler/dpp_builder/: Cargo.toml
compiler/dpp_builder/src/: env.rs  lib.rs  prelude.rs  target.rs
compiler/dpp_driver/: Cargo.toml
compiler/dpp_driver/src/: env.rs  target.rs
compiler/dpp_dslgen/: Cargo.toml
compiler/dpp_langpart/: Cargo.toml
compiler/dpp_langpart/src/: parser.rs  prelude.rs
compiler/dpp_langpart/src/parser/: rule.rs  syntax.rs
compiler/dpp_langpart_macros/: Cargo.toml
compiler/dpp_langpart_macros/src/: lexer.rs  parser.rs
compiler/dpp_langpart_macros/tests/: lexer.rs  parser.rs
compiler/dpp_macros/: Cargo.toml
compiler/dpp_macros/src/: builder.rs
compiler/driver/compiler/: Cargo.toml
compiler/driver/compiler/src/: lib.rs
compiler/driver/interpreter/: Cargo.toml
compiler/driver/interpreter/src/: lib.rs
compiler/executor/compiler/: Cargo.toml
compiler/executor/compiler/src/: lib.rs
compiler/executor/interpreter/: Cargo.toml
compiler/executor/interpreter/src/: lib.rs
compiler/processor/processor/: Cargo.toml
compiler/processor/processor/src/: lib.rs
compiler/processor/processor_check/: Cargo.toml
compiler/processor/processor_codegen/llvm/: Cargo.toml
compiler/processor/processor_dslgen/: Cargo.toml
compiler/processor/processor_dslgen/src/: lib.rs
compiler/processor/processor_langpart/src/: lib.rs  prelude.rs
compiler/processor/processor_langpart_macros/: Cargo.toml
compiler/processor/processor_langpart_macros/tests/: lexer.rs  parser.rs
compiler/processor/processor_lexer/: Cargo.toml
compiler/processor/processor_lexer/src/: lib.rs  prelude.rs
compiler/processor/processor_lexer_macros/: Cargo.toml
compiler/processor/processor_lexer_macros/macros/: Cargo.toml
compiler/processor/processor_lexer_macros/macros_declarative/: Cargo.toml
compiler/processor/processor_lexer_macros/macros_procedural/: Cargo.toml
compiler/processor/processor_lexer_macros/src/: lexer.rs
compiler/processor/processor_parser/: Cargo.toml
compiler/processor/processor_parser/src/: lib.rs  pimpl.rs  prelude.rs  rule.rs  syntax.rs
compiler/processor/processor_parser_macros/: Cargo.toml
compiler/processor/processor_parser_macros/macros/: Cargo.toml
compiler/processor/processor_parser_macros/macros_declarative/: Cargo.toml
compiler/src/: lib.rs  prelude.rs
examples/: Cargo.toml
examples/calc_interpreter/: Cargo.toml  build.rs
examples/calc_interpreter/src/: main.rs
examples/calculator/: interpreter.rs
examples/minic_interpreter/: Cargo.toml  build.rs
examples/minic_interpreter/src/: main.rs
examples/simple_interpreter/: Cargo.toml  build.rs
examples/simple_interpreter/src/: main.rs
processor/processor/: Cargo.toml
processor/processor/src/: lib.rs
src/editor/src-rs/: Cargo.toml  build.rs  tauri.conf.json
tests/: Cargo.toml  simple.rs
tests/default/: Cargo.toml  build.rs
tests/default/src/: lib.rs
tests/driver/: compiler.rs  interpreter.rs
tests/executor/: compiler.rs  interpreter.rs
tests/impl_orig_target/: impl_orig_target.rs  orig_target.rs  test.rs
tests/langpart/: calculator.rs
tests/simple/: simple.rs
tests/simplelang/: simplelang.rs  test.rs
tests/with_serde/: Cargo.toml  build.rs
tests/with_serde/src/: lib.rs
(+341 files in other folders)
