[workspace]
resolver = "2"
members = [
    # Compiler
    "compiler",

    # Library
    "library",

    # Tools
    "src/editor/src-rs",

    # Examples
    "examples/calc_interpreter",
    "examples/minic_interpreter",
]
exclude = [
    # Tools
    "src/rustdoc_web",

    # Tests
    "tests/default",
    "tests/with_serde",
]

[workspace.dependencies]
anyhow = "1.0.75"
thiserror = "1.0.50"
serde = "1.0.192"
compiler = { path = "./compiler" }
lib = { path = "./library" }
