[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core
designer = { path = "./crates/core/designer", optional = true }
irgen = { path = "./crates/core/irgen", optional = true }
processor = { path = "./crates/core/processor", optional = true }

# Interface (wrapper)
bricks = { path = "./crates/interface/bricks" }
entrypoint = { path = "./crates/interface/entrypoint" }

[features]
default = ["designer", "irgen", "processor"]
dev = ["designer", "irgen", "processor"]
with-serde = ["designer/with-serde", "irgen/with-serde", "processor/with-serde"]
