[package]
name = "examples"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
anyhow = "1.0"
thiserror = "1.0"
processor = { path = "../processor/processor" }
processor_lib_dev = { package = "lib_dev", path = "../library/dev" }

[[example]]
name = "calc_interpreter"
path = "calculator/interpreter.rs"
