[package]
name = "examples"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
anyhow = "1.0"
thiserror = "1.0"
interpreter = { package = "interpreter", path = "../driver/interpreter" }
lib = { package = "lib", path = "../library" }

[[example]]
name = "calc_interpreter"
path = "calculator/interpreter.rs"
