[package]
name = "examples"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
anyhow = "1.0"
thiserror = "1.0"
strum = { version = "0.25", features = ["derive"] }
blockdsl = { patckage = "blockdsl", path = "../" }

[[example]]
name = "calc_interpreter"
path = "calculator/interpreter.rs"
