[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
anyhow = "1.0"
thiserror = "1.0"
strum = { version = "0.25", features = ["derive"] }
compiler = { package = "compiler", path = "../driver/compiler" }
interpreter =  { package = "interpreter", path = "../driver/interpreter" }
lib = { package = "lib", path = "../library" }

[[test]]
name = "driver-c"
path = "driver/compiler.rs"

[[test]]
name = "driver-i"
path = "driver/interpreter.rs"

[[test]]
name = "langpart"
path = "langpart/calculator.rs"
