[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
anyhow = "1.0"
thiserror = "1.0"
strum = { version = "0.25", features = ["derive"] }
blockdsl_compiler = { package = "blockdsl_compiler", path = "../compiler" }
blockdsl_lib = { package = "blockdsl_lib", path = "../library" }

[[test]]
name = "executor-c"
path = "executor/compiler.rs"

[[test]]
name = "executor-i"
path = "executor/interpreter.rs"

[[test]]
name = "langpart"
path = "langpart/calculator.rs"
