[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
macros = { package = "compiler_macros", path = "./macros/macros", optional = true }
designer = { path = "../designer/designer", optional = true }
processor = { path = "../processor/processor", optional = true }
exec_compiler = { path = "../executor/compiler", optional = true }
exec_interpreter = { path = "../executor/interpreter", optional = true }

[features]
default = ["macros", "processor", "exec_compiler", "exec_interpreter"]
build = ["macros/build", "designer"]
with-serde = ["designer/with-serde", "processor/with-serde"]
