[package]
name = "depagerpp_langpart_macros"
version = "0.1.0"
edition = "2021"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = {version ="2.0", features = ["full", "extra-traits"] }
strum = { version = "0.25", features = ["derive"] }
langpart = { package = "depagerpp_langpart", path = "../dpp_langpart" }

[lib]
proc-macro = true
