[package]
name = "simple_interpreter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = "1.0"
blockdsl_compiler = { package = "blockdsl_compiler", path = "../../compiler" }

[build-dependencies]
blockdsl_compiler = { package = "blockdsl_compiler", path = "../../compiler" }
