[package]
name = "simple_interpreter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
blockdsl_compiler = { package = "blockdsl_compiler", path = "../../compiler" }

[build-dependencies]
blockdsl_compiler = { package = "blockdsl_compiler", path = "../../compiler", features = ["with-serde"] }
