[package]
name = "processor"
version = "0.1.0"
edition = "2021"

[dependencies]
driver = { package = "processor_driver", path = "../processor_driver" }
dslgen = { package = "processor_dslgen", path = "../processor_dslgen" }
langpart = { package = "processor_langpart", path = "../processor_langpart" }
langpart_macros = { package = "processor_langpart_macros", path = "../processor_langpart_macros" }
