[package]
name = "test_with_serde"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
compiler = { path = "../../compiler/compiler", features = ["with-serde"] }

[build-dependencies]
compiler = { path = "../../compiler/compiler", features = ["build", "with-serde"] }
