[package]
name = "designer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
codegen = { package = "designer_codegen", path = "../designer_codegen", optional = true }
constraint_ctime = { package = "designer_constraint_ctime", path = "../designer_constraint_ctime" }
constraint_rtime = { package = "designer_constraint_rtime", path = "../designer_constraint_rtime" }
design = { package = "designer_design", path = "../designer_design" }

[features]
default = ["codegen"]
with-serde = ["codegen/with-serde"]
