[package]
name = "processor"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"], optional = true }
# check = { package = "processor_check", path = "../processor_check" }
# codegen = { package = "processor_codegen", path = "../processor_codegen" }
dslgen = { package = "processor_dslgen", path = "../processor_dslgen", optional = true }
lexer = { package = "processor_lexer", path = "../processor_lexer" }
lexer_macros = { package = "processor_lexer_macros", path = "../processor_lexer_macros" }
parser = { package = "processor_parser", path = "../processor_parser" }
parser_macros = { package = "processor_parser_macros", path = "../processor_parser_macros/macros" }

[features]
default = ["dslgen"]
with-serde = ["serde", "dslgen/with-serde"]
