[package]
name = "processor_dslgen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
lexer = { package = "processor_lexer", path = "../processor_lexer" }
parser = { package = "processor_parser", path = "../processor_parser" }

[features]
default = []
with-serde = ["serde"]
