[package]
name = "processor_dslgen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
lexer = { package = "processor_lexer", path = "../processor_lexer", optional = true }
parser = { package = "processor_parser", path = "../processor_parser", optional = true }

[features]
default = ["lexer", "parser"]
with-serde = ["serde", "lexer/with-serde", "parser/with-serde"]
