[package]
name = "processor_lexer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
regex = "1.9.1"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }

[features]
default = []
with-serde = ["serde/derive"]
