[package]
name = "processor_lexer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
regex = "1.9.1"
serde = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }

[features]
default = []
with-serde = ["serde/derive"]
