[package]
name = "processor_lexer_macros"
version = "0.1.0"
edition = "2021"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version ="2.0", features = ["full", "extra-traits"] }
anyhow = "1.0"
thiserror = "1.0"
lexer = { package = "processor_lexer", path = "../processor_lexer" }

[lib]
proc-macro = true
