[package]
name = "processor_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.11"
strum = { version = "0.25", features = ["derive"] }
lexer = { package = "processor_lexer", path = "../processor_lexer" }
