[package]
name = "processor_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
itertools = "0.11"
lexer = { package = "processor_lexer", path = "../processor_lexer", features = ["with-serde"] }
