[package]
name = "processor_parser_macros"
version = "0.1.0"
edition = "2021"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version ="1.0", features = ["full", "extra-traits"] }
anyhow = "1.0"
thiserror = "1.0"
strum = { version = "0.25", features = ["derive"] }
parser = { package = "processor_parser", path = "../processor_parser" }

[lib]
proc-macro = true
