[package]
name = "compiler_macros"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
macros_decralative = { package = "compiler_macros_declarative", path = "../macros_declarative", optional = true }

[features]
default = ["macros_decralative"]
build = ["macros_decralative/build"]
