[package]
name = "designer_codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tinytemplate = "1.1"
serde = { workspace = true, features = ["derive"] }
design = { package = "designer_design", path = "../designer_design" }

[features]
default = []
with-serde = []
