[package]
name = "processor_lexer_macros"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
macros_decralative = { package = "processor_lexer_macros_declarative", path = "../macros_declarative" }
macros_procedural = { package = "processor_lexer_macros_procedural", path = "../macros_procedural" }
