[package]
name = "processor_lexer_macros_procedural"
version = "0.1.0"
edition = "2021"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version ="2.0", features = ["full", "extra-traits"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
lexer = { package = "processor_lexer", path = "../../processor_lexer" }

[lib]
proc-macro = true
